--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "name": "bible-image-generation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@web-std/file": "^3.0.3",
-    "dotenv": "^17.2.3",
+    "react": "19.1.0",
     "openai": "^6.1.0",
-    "prettier": "^3.6.2",
-    "sharp": "^0.34.4"
+    "react-dom": "19.1.0",
+    "sharp": "^0.34.4",
+    "next": "15.5.4"
   },
   "devDependencies": {
-    "@types/node": "^24.6.2",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
     "@types/sharp": "^0.31.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
-  },
-  "private": true
+    "tailwindcss": "^4",
+    "prettier": "^3.6.2"
+  }
 }
