--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@langchain/core": "^0.3.78",
+    "@langchain/openai": "^0.6.14",
     "@web-std/file": "^3.0.3",
-    "react": "19.1.0",
+    "next": "15.5.4",
     "openai": "^6.1.0",
+    "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "^0.34.4",
-    "next": "15.5.4"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
     "@types/sharp": "^0.31.1",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
-    "prettier": "^3.6.2"
+    "typescript": "^5"
   }
 }
